Update Nav and Footer

--- a/index.html
+++ b/index.html
@@ -25,17 +25,13 @@
     <div class="nav1">
       <ul>
         <li><img src="UYULogo.png" class="UYULogo"></img></li>
-        <li><a href="#ThisShouldGoToHomePage" class="Button">Home</a></li>
+        <li><a href="https://yuzhou1655.github.io/Home/" class="Button">Home</a></li>
         <li><a href="#ThisShouldGoToGameDesignsPage" class="Button">Game Designs</a></li>
         <li><a href="#ThisShouldGoToOtherProjectsPage" class="Button">Other Projects</a></li>
-        <li><a style="padding-right: 0vw;" href="#ThisShouldGoToAboutMePage" class="Button">About Me</a></li>
+        <li><a href="https://yuzhou1655.github.io/AboutMe/" class="Button">About Me</a></li>
       </ul>
     </div>
   </nav>
-
-
-
-
 
   <section class="Content">
 
@@ -49,7 +45,7 @@
           Throughout the years in college, I delved into courses that explored the diverse realms of user experience,
           physical computing, and interactive storytelling.
         </p>
-        <p class="content"><a href="#Page" class="Button">Learn More</a></p>
+        <p class="content"><a href="https://yuzhou1655.github.io/PhysicalComputingP1/" class="Button">Learn More</a></p>
         <hr style="margin:auto;margin-top: 5vh;margin-bottom: 5vh ;width:30%;height:2px;color:#463f3a">
       </section>
 
@@ -63,7 +59,7 @@
           Throughout the years in college, I delved into courses that explored the diverse realms of user experience,
           physical computing, and interactive storytelling.
         </p>
-        <p class="content"><a href="#Page" class="Button">Learn More</a></p>
+        <p class="content"><a href="https://yuzhou1655.github.io/PhysicalComputingP2/" class="Button">Learn More</a></p>
         <hr style="margin:auto;margin-top: 5vh;margin-bottom: 5vh ;width:30%;height:2px;color:#463f3a">
       </section>
 
@@ -77,7 +73,7 @@
           Throughout the years in college, I delved into courses that explored the diverse realms of user experience,
           physical computing, and interactive storytelling.
         </p>
-        <p class="content"><a href="#Page" class="Button">Learn More</a></p>
+        <p class="content"><a href="https://yuzhou1655.github.io/PhysicalComputingP3/" class="Button">Learn More</a></p>
         <hr style="margin:auto;margin-top: 5vh;margin-bottom: 5vh ;width:30%;height:2px;color:#463f3a">
         </div>
 
@@ -86,12 +82,11 @@
 
 
 
-
   <section class="Contact">
     <table class="Table">
       <thead style="font-size:1.2vw;">
         <tr>
-          <th><img src="UYULogo.png" class="UYULogo"></img></th>
+          <th style="font-size:2vw;">Yu Zhou</th>
           <th> </th>
           <th>Game Designs</th>
           <th>Other Projects</th>
@@ -104,20 +99,20 @@
           <td></td>
           <td> </td>
           <td><a href="#LinkToGDProject1" Class="Button">Timely Shot</a></td>
-          <td><a href="#LinkToPCC" Class="Button">Physical Computings</a></td>
+          <td><a href="https://yuzhou1655.github.io/PhysicalComputings/" Class="Button">Physical Computings</a></td>
         </tr>
 
         <tr>
           <td> </td>
           <td> </td>
-          <td><a href="#LinkToGDProject2" Class="Button">Before the Rainstorm</a></td>
+          <td><a href="https://yuzhou1655.github.io/BeforeTheRainstormZY/" Class="Button">Before the Rainstorm</a></td>
           <td><a href="#LinkToVDC" Class="Button">Visual Designs</a></td>
         </tr>
 
         <tr>
           <td> yxz1655@miami.edu</td>
           <td> </td>
-          <td><a href="#LinkToGDProject3" Class="Button">Duckrossing</a></td>
+          <td><a href="https://yuzhou1655.github.io/DuckrossingZY/" Class="Button">Duckrossing</a></td>
           <td><a href="#LinkToESP" Class="Button">Esports Podcasts</a></td>
         </tr>
 
