--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
         <img class="imgL" alt="P1" src="P1.JPG">
         <p class="subsubheader">Ford Mustang Boss 428 Cardboard ver.</p>
         <p>
-          Initially, I was drawn to the immersive and evolving world of interactive media. I recognized its potential to
-          engage audiences in unprecedented ways, fascinated by the intersection of technology and creativity.
-          Throughout the years in college, I delved into courses that explored the diverse realms of user experience,
-          physical computing, and interactive storytelling.
+          The prompt of first Physical Computing is "Something about You". Boss 429 is one of the most classic and highly valued Ford Mustang, and Ford Mustang is always my favorite model ever since I knew it exists when I was 11 years old. Naturally, I took the chance to build one of my own cardboard version of Ford Mustang Boss 429 made with with arduino boards, cricut design and python.
         </p>
         <p class="content"><a href="https://yuzhou1655.github.io/PhysicalComputingP1/" class="Button">Learn More</a></p>
         <hr style="margin:auto;margin-top: 5vh;margin-bottom: 5vh ;width:30%;height:2px;color:#463f3a">
@@ -54,10 +51,7 @@
         <img class="imgR" alt="P2" src="P2.png">
         <p class="subsubheader">Weather Box</p>
         <p>
-          Initially, I was drawn to the immersive and evolving world of interactive media. I recognized its potential to
-          engage audiences in unprecedented ways, fascinated by the intersection of technology and creativity.
-          Throughout the years in college, I delved into courses that explored the diverse realms of user experience,
-          physical computing, and interactive storytelling.
+          This time we are going to make something related to "Life Hack" and it could be useful or useless. This weather box is designed to help you indentify the weather and provide some emergency light in dark. It comes with a light sensor, on the one hand, it will detects the weather based the light it received, on the other hand, it will turns the light on itself when the enviroment gets too dark.
         </p>
         <p class="content"><a href="https://yuzhou1655.github.io/PhysicalComputingP2/" class="Button">Learn More</a></p>
         <hr style="margin:auto;margin-top: 5vh;margin-bottom: 5vh ;width:30%;height:2px;color:#463f3a">
@@ -68,10 +62,7 @@
         <img class="imgL" alt="P3" src="P3.JPG">
         <p class="subsubheader">Trap</p>
         <p>
-          Initially, I was drawn to the immersive and evolving world of interactive media. I recognized its potential to
-          engage audiences in unprecedented ways, fascinated by the intersection of technology and creativity.
-          Throughout the years in college, I delved into courses that explored the diverse realms of user experience,
-          physical computing, and interactive storytelling.
+          Lastly, we are free to do whatever we want. At that time I was obsessed with this game "Overwatch". In OVERWATCH, there are two character always floating in the air, Zenyata, a robot monk, and Sigma, an insane gravity scientist. There is another character who can place a obviously mechanical, triggered by step on it, trap. Do you think Zenyata and Sigma will be trapped? 
         </p>
         <p class="content"><a href="https://yuzhou1655.github.io/PhysicalComputingP3/" class="Button">Learn More</a></p>
         <hr style="margin:auto;margin-top: 5vh;margin-bottom: 5vh ;width:30%;height:2px;color:#463f3a">
